Version 5.1.0
- Added base32 encoding/decoding
- Various REST controller fixes, mainly in accepting parameters
- The library is now always compiled with PIC
- Requred boost version is now 71
- Ignore SIGCHLD in foreground mode, signals are now handled by 
  cross platform implementation
- reintroduced a Windows version

Version 5.0.2
- Add support for building shared libraries
- Decoupled example code from rest, should now be build after installation,
  or use the STAGE=1 option to make.
- rest controller can now return a reply object, adding flexibility

Version 5.0.1

- Update makefile to include changes made for the Debian package
- Fix writing HTML, proper empty elements
- Added some workarounds to build on macOS
- Fixed endianness issue in sha implementation

Version 5.0.0

- Total rewrite of about everything
- Controllers are now the main handlers of requests, three major
  variants for HTML, REST and SOAP.
- Implemented some cryptographic routines in order to drop
  dependency on libcrypto++
- Redesigned authentication, dropped HTTP digest and opted for JWT,
  added security_context class for managing all of this
- Code now requires a c++17 compiler
- Lots of test code added
- Added some real world examples
- Tested with boost 1.65.1 up to 1.73
- Refactored request, it is now a class and credentials are
  always stored if a valid access-token was detected.
- A bunch of fixes to make web application work behind a
  reverse proxy.

Version 4.0.0

- Major rewrite, may break code.
- Added a JSON parser and compatible internal object, is analogous
  to the version of nlohmann. Replaces the old element class in
  webapp.
- Removed parameter_map, get request parameters from request itself.
- Reorganized code, separate folder for lib and examples.
- Refactored webapp and move the tag processing into a separate
  class. Added a second tag processor that mimics thymeleaf.

Version 3.0.2

- Change in zeep/xml/serialize.hpp for gcc 4.7 compiler

Version 3.0.1
