@@ -16,6 +16,8 @@ namespace zeep::http
 
 // --------------------------------------------------------------------
 
+/// \brief the exception thrown by libzeep when an invalid uri is passed to
+///        the uri constructor.
 class uri_parse_error : public zeep::exception
 {
   public:
@@ -27,6 +29,7 @@ class uri_parse_error : public zeep::exception
 
 // --------------------------------------------------------------------
 
+/// \brief Simple class encapsulating the UriUriStructA from liburiparser
 class uri
 {
   public:
@@ -39,16 +42,25 @@ class uri
 	uri &operator=(const uri &u);
 	uri &operator=(uri &&u);
 
+	/// \brief Return true if url is empty (not useful I guess, you cannot construct an empty url yet)
 	bool empty() const;
 
+	/// \brief Return true if the path is absolute, is always false when host is set
 	bool is_absolute() const;
 
-	std::string get_scheme() const;
-	std::string get_host() const;
-	std::filesystem::path get_path() const;
-	std::string get_query() const;
+	/// \brief Return the scheme
+	std::string get_scheme() const;				
 
-	std::string string() const;
+	/// \brief Return the host
+	std::string get_host() const;				
+
+	/// \brief Return the path
+	std::filesystem::path get_path() const;		
+
+	/// \brief Return the query
+	std::string get_query() const;				
+
+	std::string string() const;					///< Return the URI as a string
 
 	void swap(uri &u) noexcept;
 
@@ -60,6 +72,8 @@ class uri
 
 // --------------------------------------------------------------------
 
+/// \brief Simply check the URI in \a uri, returns true if the uri is valid
+/// \param uri		The URI to check
 bool is_valid_uri(const std::string& uri);
 
 // --------------------------------------------------------------------
